--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -170,7 +170,7 @@ button:active {
     }
 
     .query {
-      height: 18vh;
+      height: 15vh;
       width: 75vw;
       padding-top: 0;
     }
@@ -181,6 +181,7 @@ button:active {
 
     button {
       width: 50vw;
+      margin: auto;
       padding: 0.5rem 1rem;
       font-size: 1rem;
     }
